Add And Delete from Cart

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,6 @@
 browser = chrome
 expectedCreateAccountText = CREATE AN ACCOUNT
 expectedPersonalInformationText = YOUR PERSONAL INFORMATION
+expectedShoppingCartSummaryText = SHOPPING-CART SUMMARY
+expectedShoppingCartEmptyText = Your shopping cart is empty.
+
