--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,33 @@
 browser = chrome
-url = http://automationpractice.com/index.php
-expectedPersonalInformationText = YOUR PERSONAL INFORMATION
+# url = http://automationpractice.com/index.php
+# expectedPersonalInformationText = YOUR PERSONAL INFORMATION
+
+
+
+
+ OrangehrmUrl = https://opensource-demo.orangehrmlive.com/index.php/buzz/viewBuzz
+expectedMyInfoText = My Info
+  userName = Admin
+ password = admin123
+
+AddressStreet1 = 365 Neptune ave, Apt D10
+City = Brooklyn
+# StateProvince = New York
+ZipPostalCode = 11235
+Country = United States
+#HomeTelephone = 3474456578
+Mobile = 3472756595
+WorkTelephone = 6464452624
+ WorkEmail = david2015@gmail.com
+# OtherEmail = kana2022@gmail.com
+
+
+QualificationsLanguageCommentsBox = Excellent!
+
+
+
+Name = John Albert
+Relationship = husband
+HomeTelephone = 3127775599
+MobileNumber = 8602021293
+WorkTelephoneNum = 3128990911
